# jukebox-infer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  download_checkpoints.sh  pyproject.toml  quick_infer.py
.github/workflows/: publish.yml
docs/: CHECKPOINT_ARCHITECTURE.md  PARITY_VERIFICATION.md  PUBLISHING.md
docs/dev/: PRINCIPLES.md
examples/: audio_continuation.py  basic_generation.py
jukebox_infer/: __init__.py  api.py  make_models.py  sample.py
jukebox_infer/data/: labels.py
jukebox_infer/prior/: autoregressive.py  conditioners.py  prior.py
jukebox_infer/transformer/: factored_attention.py  transformer.py
jukebox_infer/utils/: audio_utils.py  dist_utils.py
jukebox_infer/vqvae/: bottleneck.py  encdec.py  resnet.py  vqvae.py
