[project]
name = "jukebox-infer"
version = "0.1.0"
description = "Inference-only implementation of OpenAI Jukebox for PyTorch 2.7+"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Jukebox-Infer Contributors" }
]
keywords = ["jukebox", "music generation", "audio", "pytorch", "inference", "vqvae", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.7.0",
    "numpy>=1.21.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "unidecode>=1.3.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
jukebox-infer = "jukebox_infer.cli:main"

[project.urls]
Homepage = "https://github.com/openmirlab/jukebox-infer"
Documentation = "https://github.com/openmirlab/jukebox-infer/blob/master/README.md"
Repository = "https://github.com/openmirlab/jukebox-infer"
Issues = "https://github.com/openmirlab/jukebox-infer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jukebox_infer"]

[tool.hatch.build]
include = [
    "jukebox_infer/**/*.py",
    "jukebox_infer/data/ids/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310"]
